feat(localization): update localization structure

--- a/src/localizations/ru.json
+++ b/src/localizations/ru.json
@@ -1,61 +1,96 @@
 {
-    "user_unauthorized_messages": {
-        "return_to_main_menu": "<i>Возвращаю в главное меню</i>",
-        "need_define_config": "Для подключения мне необходимо определить Вашу конфигурацию",
-        "ask_four_questions": "🙋‍♂️ Задам 4 коротких вопроса!",
-        "choose_your_platform": "<b>Выберите свою платформу</b>",
-        "choose_your_os": "<b>Укажите операционную систему</b>",
-        "choose_chatgpt_option": "<b>Используете ли Вы ChatGPT?</b>",
-        "chatgpt_info": "<b>ChatGPT</b> — нейронная сеть в виде чат-бота, способная отвечать на сложные вопросы и вести осмысленный диалог!",
-        "enter_ref_promo": "<b>И последний шаг: введите реферальный промокод, если он имеется</b>",
-        "ref_promo_accepted": "✨ Ух-ты! Принят промокод от пользователя <b>{0}</b>, дающий <b>{1} дней</b> бесплатной подписки!",
-        "sub_info": "⭐️ Подключена <b>{0}</b> со стоимостью <b>{1:.0f}</b>₽ в месяц.",
-        "invalid_promo": "Такого промокода нет! Попробуйте ввести его еще раз",
-        "need_renew_sub": "❗️ <b>Чтобы получить конфигурацию, Вам необходимо продлить подписку!</b>"
+    "user_unauthorized":
+    {
+        "messages": {
+            "return_to_main_menu": "<i>Возвращаю в главное меню</i>",
+            "need_define_config": "Для подключения мне необходимо определить Вашу конфигурацию",
+            "ask_four_questions": "🙋‍♂️ Задам 4 коротких вопроса!",
+            "choose_your_platform": "<b>Выберите свою платформу</b>",
+            "choose_your_os": "<b>Укажите операционную систему</b>",
+            "choose_chatgpt_option": "<b>Используете ли Вы ChatGPT?</b>",
+            "chatgpt_info": "<b>ChatGPT</b> — нейронная сеть в виде чат-бота, способная отвечать на сложные вопросы и вести осмысленный диалог!",
+            "enter_ref_promo": "<b>И последний шаг: введите реферальный промокод, если он имеется</b>",
+            "ref_promo_accepted": "✨ Ух-ты! Принят промокод от пользователя <b>{0}</b>, дающий <b>{1} дней</b> бесплатной подписки!",
+            "sub_info": "⭐️ Подключена <b>{0}</b> со стоимостью <b>{1:.0f}</b>₽ в месяц.",
+            "invalid_promo": "Такого промокода нет! Попробуйте ввести его еще раз",
+            "need_renew_sub": "❗️ <b>Чтобы получить конфигурацию, Вам необходимо продлить подписку!</b>"
+        },
+
+        "keyboard_buttons": {
+            "join": "🔥 Подключиться!",
+            "project_info": "О проекте",
+            "smartphone": "📱 Смартфон",
+            "pc": "💻 ПК",
+            "cancel": "Отмена",
+            "android": "Android",
+            "ios": "IOS (IPhone)",
+            "windows": "Windows",
+            "macos": "macOS",
+            "linux": "Linux",
+            "use_chatgpt": "Использую",
+            "dont_use_chatgpt": "Не использую",
+            "what_is_chatgpt": "Что это?",
+            "no_promo": "Нет промокода"
+        },
+
+        "telegram_file_ids": {
+
+        }
     },
 
-    "user_authorized_messages": {
+    "user_authorized":
+    {
+        "messages": {
+            "sub_isnt_active": "Подписка еще не активирована, так как администратор пока что не прислал конфигурацию! Не переживайте, отчет времени истечения подписки начнется только после ее получения!",
+            "sub_active": "Подписка активна!",
+            "sub_inactive": "Подписка деактивирована :/",
+            "sub_expiration_date": "Срок окончания действия подписки: <b>{0}</b>.",
+            "return_to_main_menu": "<i>Возвращаю в главное меню</i>",
+            "go_sub_renewal_menu": "<i>Перехожу в меню продления подписки!</i>",
+            "payment_history_message": "Оплата подписки <b>{0}</b> за <b>{1}</b>\n\nЗа {2} месяца подписки Вы заплатили <b>{3}₽</b>.\n\nУникальный идентификатор платежа: <b>{4}</b>.",
+            "cant_find_payments": "К сожалению, не удалось найти информацию о поступивших платежах :/.\nВоспользуйтесь командой /restore_payments, чтобы восстановить платеж!",
+            "cancel_payemnt": "Оплата отменена!",
+            "check_payment_hour": "Проверяю все созданные платежи за последний час!",
+            "payment_found": "Оплата по заказу с уникальным идентификатором  #{0} найдена!"
+    
+        },
 
+        "keyboard_buttons": {
+
+        },
+
+        "telegram_file_ids": {
+
+        }
     },
 
-    "admin_messages": {
+    "admin":
+    {
+        "messages": {
 
+        },
+
+        "keyboard_buttons": {
+
+        },
+
+        "telegram_file_ids": {
+
+        }
     },
 
-    "user_unauthorized_keyboard_buttons": {
-        "join": "🔥 Подключиться!",
-        "project_info": "О проекте",
-        "smartphone": "📱 Смартфон",
-        "pc": "💻 ПК",
-        "cancel": "Отмена",
-        "android": "Android",
-        "ios": "IOS (IPhone)",
-        "windows": "Windows",
-        "macos": "macOS",
-        "linux": "Linux",
-        "use_chatgpt": "Использую",
-        "dont_use_chatgpt": "Не использую",
-        "what_is_chatgpt": "Что это?",
-        "no_promo": "Нет промокода"
-    },
+    "service_functions":
+    {
+        "messages": {
+            "payment_form": "⭐️ <b>{0}</b>\n\nПродление на <b>{1} мес</b>.\n<b>Сумма к оплате: {2}</b>₽ {discount_str}.\n\nУникальный идентификатор платежа: <b>#{3}</b>."
+        },
 
-    "user_authorized_keyboard_buttons": {
+        "keyboard_buttons": {
 
-    },
+        },
 
-    "admin_keyboard_buttons": {
+        "telegram_file_ids": {
 
-    },
-
-    "user_unauthorized_telegram_file_ids": {
-
-    },
-
-    "user_authorized_telegram_file_ids": {
-
-    },
-
-    "admin_telegram_file_ids": {
-
+        }
     }
 }
