--- a/src/localizations/ru.json
+++ b/src/localizations/ru.json
@@ -11,7 +11,7 @@
             "chatgpt_info": "<b>ChatGPT</b> — нейронная сеть в виде чат-бота, способная отвечать на сложные вопросы и вести осмысленный диалог!",
             "enter_ref_promo": "<b>И последний шаг: введите реферальный промокод, если он имеется</b>",
             "ref_promo_accepted": "✨ Ух-ты! Принят промокод от пользователя <b>{0}</b>, дающий <b>{1} дней</b> бесплатной подписки!",
-            "sub_info": "⭐️ Подключена <b>{0}</b> со стоимостью <b>{1:.0f}</b>₽ в месяц.",
+            "sub_info": "🌟 Подключена <b>{0}</b> со стоимостью <b>{1:.0f}</b>₽ в месяц.",
             "invalid_promo": "Такого промокода нет! Попробуйте ввести его еще раз",
             "need_renew_sub": "❗️ <b>Чтобы получить конфигурацию, Вам необходимо продлить подписку!</b>"
         },
@@ -41,21 +41,124 @@
     "user_authorized":
     {
         "messages": {
+            "rules": "<b>При работе с сервисом обязательно:</b>\n\n1. Запрещается делиться конфигурациями (QR-кодами для смартфонов или файлами <code>*.conf</code> для ПК) с другими людьми. Одна конфигурация может быть использована только для одного Вашего устройства. При этом для своего пользования Вы можете запросить неограниченное количество дополнительных конфигураций.\n\n2. Запрещается загружать файлы через торрент-клиенты. Однако сами файлы расширения <code>*.torrent</code> скачивать можно.\n<i>Пример: Вы хотите скачать фильм, однако сайт, на котором размещены файлы, недоступен из России. Вы включаете VPN, заходите на сайт и загружаете файл filmexample.torrent. Далее Вы отключаете VPN и приступаете к загрузке самого фильма в Вашем торрент-клиенте.</i>\n\n\n<b>При работе с сервисом рекомендуется:</b>\n\n1. Не использовать VPN в моментах, когда он Вам не нужен. Благодаря этому, Вы не будете испытывать проблем с Вашими приложениями.",
             "sub_isnt_active": "Подписка еще не активирована, так как администратор пока что не прислал конфигурацию! Не переживайте, отчет времени истечения подписки начнется только после ее получения!",
             "sub_active": "Подписка активна!",
             "sub_inactive": "Подписка деактивирована :/",
             "sub_expiration_date": "Срок окончания действия подписки: <b>{0}</b>.",
             "return_to_main_menu": "<i>Возвращаю в главное меню</i>",
-            "go_sub_renewal_menu": "<i>Перехожу в меню продления подписки!</i>",
-            "payment_history_message": "Оплата подписки <b>{0}</b> за <b>{1}</b>\n\nЗа {2} месяца подписки Вы заплатили <b>{3}₽</b>.\n\nУникальный идентификатор платежа: <b>{4}</b>.",
-            "cant_find_payments": "К сожалению, не удалось найти информацию о поступивших платежах :/.\nВоспользуйтесь командой /restore_payments, чтобы восстановить платеж!",
-            "cancel_payemnt": "Оплата отменена!",
+            "go_sub_renewal_menu": "<i>Перехожу в меню продления подписки</i>",
+            "payment_history_message": "🌟 <b>{0}</b> была продлена на {1} мес. за {2:g}₽.\n\n<b>Дата оплаты</b>: {3}\n\nИдентификатор платежа: #{4}",
+            "cant_find_payments": "Увы! Я не смог найти информацию об успешных платежах 😔",
+            "restore_payments": "Для восстановления давних платежей воспользуйтесь командой\n/restore_payments",
+            "cant_find_payments_restore": "К сожалению, я не смог найти оплаченные платежы 😪\n\nВозможно, оплата еще не была завершена, либо информация о ней еще в пути!\n\nЕсли Вы уверены, что платеж был завершен успешно, обратитесь в раздел помощи /help",
+            "cancel_payment": "<i>Оплата отменена</i>",
             "check_payment_hour": "Проверяю все созданные платежи за последний час!",
-            "payment_found": "Оплата по заказу с уникальным идентификатором  #{0} найдена!"
-    
+            "payment_found": "Оплата по заказу с уникальным идентификатором <b>#{0}</b> найдена!",
+            "go_personal_account": "<i>Перехожу в личный кабинет</i>",
+            "client_info": "👾 Вот что мне известно:\n\n{username_str}<b>Имя</b>: {0}\n{surname_str}<b>Телеграм ID</b>: {1}\n<b>Дата регистрации</b>: {2}",
+            "subscription_info": "🌟 <b>{0}</b>\n\n{1}\n\n<b>Стоимость</b>: {2:g}₽ в месяц.",
+            "go_config_menu": "<i>Перехожу в меню конфигураций</i>",
+            "ref_program_info": "<b>Ух-ты! У нас появилась реферальная программа!</b>\n\nОписание-реферальной-программы-в-разработке",
+            "go_promo_menu": "<i>Перехожу в меню промокодов</i>",
+            "enter_promo": "<b>🎟 Отправьте мне промокод сообщением!</b>",
+            "go_settings": "<i>Перехожу в настройки</i>",
+            "return_to_personal_account": "<i>Возвращаю в личный кабинет</i>",
+            "configs_info": "Информация о всех ваших конфигурациях, теперь не нужно искать их по диалогу с ботом!\n\nВсего конфигураций <b>{0}</b>.",
+            "configs_rules": "<b>Напоминаю основные правила /rules:\n\n1. Одно устройство — одна конфигурация.\n2. Делиться конфигурациями с другими людьми запрещено!</b>",
+            "return_to_configs_menu": "<i>Возвращаю в меню конфигураций</i>",
+            "cant_request_config": "Для запроса новой конфигурации необходимо продлить подписку!",
+            "ask_three_questions": "Понадобиться ответить на 3 вопроса, чтобы запросить новую конфигурацию у администратора!\n\nОбщее число Ваших конфигураций: <b>{0}</b>",
+            "choose_your_platform": "<b>Выберите свою платформу</b>",
+            "choose_your_os": "<b>Укажите операционную систему</b>",
+            "choose_chatgpt_option": "<b>Используете ли Вы ChatGPT?</b>",
+            "chatgpt_info": "<b>ChatGPT</b> — нейронная сеть в виде чат-бота, способная отвечать на сложные вопросы и вести осмысленный диалог!",
+            "wait_for_admin": "Отлично! Теперь ждем ответа от разработчика: в скором времени он проверит ваши текущие конфигурации и вышлет новую!",
+            "i_wanna_sleep": "Пожалуйста, не забывайте, что он тоже человек, и периодически спит (хотя на самом деле крайне редко) 😅",
+            "return_to_settings": "<i>Возвращаю в настройки</i>",
+            "go_settings_chatgpt": "<i>Перехожу в настройки режима ChatGPT</i>",
+            "chatgpt_on": "<b>Режим ChatGPT для бота включен</b>",
+            "chatgpt_off": "<b>Режим ChatGPT для бота выключен</b>",
+            "go_settings_notifications": "<i>Перехожу в настройки уведомлений</i>",
+            "1d_on": "<b>Отправка уведомления за 1 день до срока окончания подписки включена</b>",
+            "1d_off": "<b>Отправка уведомления за 1 день до срока окончания подписки выключена</b>",
+            "3d_on": "<b>Отправка уведомления за 3 дня до срока окончания подписки включена</b>",
+            "3d_off": "<b>Отправка уведомления за 3 дня до срока окончания подписки выключена</b>",
+            "7d_on": "<b>Отправка уведомления за 7 дней до срока окончания подписки включена</b>",
+            "7d_off": "<b>Отправка уведомления за 7 дней до срока окончания подписки выключена</b>",
+            "invited_by": "🚀 Вы были приглашены пользователем <b>{0} {username_str}</b>",
+            "invited_by_nobody": "🚀 Ого! Вы сами узнали о существовании данного проекта и зарегистрировались без приглашения от другого пользователя!",
+            "who_was_invited_str": "{0}. Пользователь <b>{1} {username_str}</b>\n",
+            "who_was_invited": "🕊 Приглашенные Вами пользователи, которые вступили в проект:\n\n{invited_str}",
+            "nobody_was_invited": "Вы еще не пригласили ни одного пользователя. Рассказывайте о нашем проекте друзьям и получайте бесплатные месяца подписки!",
+            "ref_program_invites_texts": [
+                "Дарова, отец. Кидаю тебе инвайт в очень крутой VPN-проект (переходи в тг бота https://t.me/ksiVPN_bot)!\nПри регистрации пошелести там, введи мой реферальный промокод <code>{0}</code>. Получишь месяц использования бесплатно!",
+                "Ээээ, брат СубханаЛлах. VPN-ом пользуешься? В любом случае переходи в тг бота https://t.me/ksiVPN_bot и регистрируйся!\nВ начале введи мой реферальный промокод <code>{0}</code>. Бесплатно будешь пользоваться VPN-ом целый месяц!",
+                "Ребята, вы издеваетесь? Я понимаю, что вам просто хочется заходить в инстаграм и наслаждаться жизнью. Но почему вы используете такие ужасные VPN-сервисы?\nНабираю команду ребят, будем делать кэш на зарубежных сервисах: https://t.me/ksiVPN_bot.\n\nПри регистрации вводи мой реферальный промокод <code>{0}</code> и получишь месяц использования бесплатно!",
+                "Короче, Меченый, я тебя спас и в благородство играть не буду: зарегистрируешься в сервисе https://t.me/ksiVPN_bot – и мы в расчете.\nЗаодно посмотрим, как быстро у тебя башка после использования бесплатных VPN-ов прояснится. А по поводу реферальных промокодов постараюсь разузнать.\nХрен его знает, на кой ляд тебе этот месяц бесплатной подписки сдался, но я в чужие дела не лезу, хочешь использовать мой реферальной промокод <code>{0}</code>, значит есть за что…",
+                "Мужчину спрашивают:\n- Что вы любите?\n- Инстаграмчик люблю! Инстаграмчик люблю пиз..ец! Сидел бы в инсте бл..ть 24 часа в сутки, просто все рилсы мира посмотрел бы, рилсы люблю аж рвёт, не могу жить без рилсов, инстаграмчик люблю пиз..ец!\n- Хм, ясно. А что ещё любите?\n- ChatGPT люблю! ChatGPT люблю пиз..ец! Др..чил бы его сутками, д..очил бы, д..очил бы и д..очил бы, хоть бы в штат OpenAI залез, только чтоб голова торчала!\n- Ээ.. а голова зачем?\n- Рилсы смотреть люблю пиз..ец!\n\nАнекдот предоставлен сервисом https://t.me/ksiVPN_bot.\nВводи мой реферальный промокод <code>{0}</code> и получай месяц использования бесплатно при регистрации!"
+            ],
+            "your_ref_code": "🕊 Ваш реферальный промокод: <b><code>{0}</code></b>",
+            "error_promo_entered_ref_code": "К сожалению, вводить реферальные промокоды можно только при регистрации 😪",
+            "error_promo_limit_activations": "К сожалению, число возможных активаций данного промокода исчерпано 🤧",
+            "error_promo_expired": "К сожалению, срок действия промокода истек 🤧",
+            "error_promo_already_entered": "Вы уже вводили данный промокод ранее!",
+            "error_promo_inaccessible": "К сожалению, Вы не можете использовать данный специальный промокод 😪",
+            "error_promo_not_exist": "Такого промокода нет! Попробуйте ввести его еще раз",
+            "global_promo_accepted": "✨ Ура! Промокод на <b>{0} дней</b> бесплатной подписки принят!",
+            "new_sub_str": "\n\n«<b>{0}</b>» — Ваш новый тип подписки со стоимостью {1:g}₽ в месяц",
+            "loсal_promo_accepted": "✨ Ура! Специальный промокод на <b>{0} дней</b> бесплатной подписки принят!{new_sub_str}",
+            "ref_promo_str": "<b>🕊 Использованный реферальный промокод</b>:\n<code>{0}</code> от пользователя {1}.\n\n",
+            "global_promos_str": "<b>📣 Использованные общедоступные промокоды</b>:\n{global_promo_row_str}\n",
+            "global_promo_row_str": "{0}. <code>{1}</code> на {2} дней подписки.\nВведен {3}.\n",
+            "local_promos_str": "<b>💎 Использованные специальные промокоды</b>:\n{local_promo_row_str}\n",
+            "local_promo_row_str": "{0}. <code>{1}</code> на {2} дней подписки.\nВведен {3}.\n",
+            "no_promo_entered": "Вы еще не вводили ни одного промокода. Следите за новостями! 🚀"
+
         },
 
         "keyboard_buttons": {
+            "sub_renewal": "❤️‍🔥 Продлить подписку!",
+            "sub_status": "Статус подписки",
+            "personal_account": "Личный кабинет",
+            "rules": "Правила",
+            "payment_1mnth": "1 месяц",
+            "payment_3mnth": "3 мес. (-10%)",
+            "payment_12mnth": "12 мес. (-15%)",
+            "payment_history": "История оплаты",
+            "return_main_menu": "Возврат в главное меню",
+            "payment_check": "Проверить оплату",
+            "payment_cancel": "Отмена оплаты",
+            "pay": "Оплатить",
+            "ref_program": "🕊 Реферальная программа",
+            "about_client": "О клиенте",
+            "about_sub": "О подписке",
+            "configs": "Конфигурации",
+            "promo": "Промокоды",
+            "settings": "Настройки",
+            "current_configs": "Мои конфигурации",
+            "request_config": "Новая конфигурация",
+            "return_to_account_menu_1": "Вернуться",
+            "return_to_account_menu_2": "Отмена ввода",
+            "return_to_configs_menu": "Отмена выбора",
+            "used_promos": "Использованные промокоды",
+            "ref_program_participation": "Участие в реферальной программе",
+            "generate_invite": "Сгенерировать приглашение *",
+            "show_ref_code": "Реферальный промокод",
+            "settings_chatgpt_mode": "Режим ChatGPT",
+            "settings_notifications": "Уведомления",
+            "1d_off": "Выключить за 1 день",
+            "1d_on": "Включить за 1 день",
+            "3d_off": "Выключить за 3 дня",
+            "3d_on": "Включить за 3 дня",
+            "7d_off": "Выключить за 7 дней",
+            "7d_on": "Включить за 7 дней",
+            "return_to_settings": "Обратно",
+            "chatgpt_off": "Выключить",
+            "chatgpt_on": "Включить",
+            "installation_instruction": "Инструкция по установке"
+
+
 
         },
 
@@ -79,10 +182,29 @@
         }
     },
 
+    "other":
+    {
+        "messages": {
+
+        },
+
+        "keyboard_buttons": {
+            "help": "Помощь",
+            "about_project": "О проекте",
+            "about_service": "О сервисе"
+        },
+
+        "telegram_file_ids": {
+
+        }
+    },
+
     "service_functions":
     {
         "messages": {
-            "payment_form": "⭐️ <b>{0}</b>\n\nПродление на <b>{1} мес</b>.\n<b>Сумма к оплате: {2}</b>₽ {discount_str}.\n\nУникальный идентификатор платежа: <b>#{3}</b>."
+            "wait_payment": "<b>Ожидаю оплаты подписки!</b>",
+            "payment_form": "⭐️ <b>{0}</b>\n\n<b>Продление на срок</b>: {1} мес.\n<b>Сумма к оплате</b>: {2:g}₽ {discount_str}\n\nИдентификатор платежа: #{3}",
+            "config_info": "{link_str}<b>Создана</b>: {0}\n{platform_str}<b>Протокол</b>: {1}\n<b>Локация VPN</b>: {2}, {3}, скорость до {4} Мбит/с, ожидаемый пинг {5} мс."
         },
 
         "keyboard_buttons": {
