--- a/src/localizations/ru.json
+++ b/src/localizations/ru.json
@@ -113,8 +113,8 @@
             "global_promo_row_str": "{0}. <code>{1}</code> на {2} дней подписки.\nВведен {3}.\n",
             "local_promos_str": "<b>💎 Использованные специальные промокоды</b>:\n{local_promo_row_str}\n",
             "local_promo_row_str": "{0}. <code>{1}</code> на {2} дней подписки.\nВведен {3}.\n",
-            "no_promo_entered": "Вы еще не вводили ни одного промокода. Следите за новостями! 🚀"
-
+            "no_promo_entered": "Вы еще не вводили ни одного промокода. Следите за новостями! 🚀",
+            "config_was_received": "✨ Ура, конфигурация получена!"
         },
 
         "keyboard_buttons": {
@@ -157,9 +157,6 @@
             "chatgpt_off": "Выключить",
             "chatgpt_on": "Включить",
             "installation_instruction": "Инструкция по установке"
-
-
-
         },
 
         "telegram_file_ids": {
@@ -170,11 +167,50 @@
     "admin":
     {
         "messages": {
-
+            "reset_fsm_keyboard": "<i>Сброс машинного состояния и клавиатуры</i>",
+            "fsm_start": "<i>Активировано машенное состояние</i>",
+            "admin_kb_info": "Для вызова данного меню используйте /admin.\b\bДоступные команды:\n\n/fileid (/fid)\n/sql_user\n/sql_config",
+            "go_send_message_menu": "<i>Перехожу в меню отправки сообщений пользователям</i>",
+            "message_everyone_info": "Введите необходимую информацию следующим сообщением, а также приложите файлы при необходимости!\n\nВведите /perfect, чтобы подтвердить выбор последнего отправленного сообщения!",
+            "clients_row_str": "{0}. {1} {2} {3} <code>{4}</code>\n",
+            "message_everyone_was_sent": "<b>Ладненько, сообщение отправлено!</b>",
+            "message_everyone_everybody_received": "<b>Ура, сообщение получат все пользователи сервиса!</b>",
+            "message_everyone_somebody_didnt_recieve": "<b>Пользователи, до которых сообщение не дошло</b>:\n{ignored_clients_str}",
+            "how_message_looks": "Вот так будет выглядеть Ваше сообщение:",
+            "message_selected_info": "Введите через запятую <b>username</b> или <b>telegram_id</b> пользователей, для которых предназначена рассылка.",
+            "message_selected_somebody_received": "<b>Сообщение будет отправленно пользователям</b>:\n\n {selected_clients_str}",
+            "message_selected_nobody_received": "Вы ошиблись при вводе пользователей! Сообщение ни до кого не дойдет!",
+            "message_selected_enter_message_info": "Теперь введите необходимую информацию следующим сообщением, а также приложите файлы при необходимости!\n\nВведите /perfect, чтобы подтвердить выбор последнего отправленного сообщения!",
+            "sql_insert_client_info": "Перешлите мне сообщение, и я выведу всю возможную информацию!",
+            "cant_read_user": "К сожалению, не могу прочитать информацию о пользователе 😭",
+            "sql_insert_config_info": "Пришлите мне сообщение в формате (вместо переноса строк используются пробелы):\n\n<b>client_id</b> - client_username | client_telegram_id\n<b>protocol_id</b> - <code>w</code> (WireGuard) | <code>x</code> (XTLS-Reality) | <code>s</code> (ShadowSocks)\n<b>location_id</b> - <code>n</code> (Netherlands) | <code>l</code> (Latvia) | <code>g</code> (Germany) | <code>u</code> (USA)\n<b>os</b> - <code>Android</code> | <code>IOS</code> | <code>Windows</code> | <code>Linux</code>\n<b>date_of_receipt</b> - дата получения конфигурации в формате <code>YYYY-MM-DD HH-MI</code>\n<b>link</b> - если вместо фото или файла *.conf нужна ссылка для XTLS/SS для ПК\n\n<b>Не забываем прикрепить файл, если требуется!</b>",
+            "sql_insert_config_check_config_info": "Кстати, проверить, какие конфигурации доступны пользователю можно командой\n/check_configs <i>telegram_id</i> | <i>username</i>",
+            "error_not_enough_flags": "Флаги введены неверно, их слишком мало!",
+            "error_bad_attachment": "Вы не приложили файл, либо добавили неверный тип вложения!",
+            "error_too_many_flags": "Флаги введены неверно, их слишком много!",
+            "error_bad_protocol": "Протокол введен неверно!",
+            "error_bad_location": "Локация введена неверно!",
+            "show_earnings": "💎 Так-так! Заработок за текущий месяц составляет <b>{0:g}</b>₽!",
+            "file_id_photo": "<b>file_id фото</b>:\n<code>{0}</code>",
+            "file_id_document": "<b>file_id документа</b>:\n<code>{0}</code>",
+            "error_no_file_for_file_id": "Файл не был прикреплен вместе с вызовом команды /fileid (/fid)!",
+            "send_configuration_info": "Пришлите мне сообщение в формате (вместо переноса строк используйте пробелы):\n\n<b>protocol</b> — <code>wireguard/wg/w</code> | <code>xtls-reality/xtls/reality/x</code> | <code>shadosocks/ss/s</code>\n<b>location</b> — <code>netherlands/n</code> | <code>latvia/l</code> | <code>germany/g</code> | <code>usa/u</code>\n<b>os</b> — <code>android</code> | <code>ios</code> | <code>windows</code> | <code>macos/mac</code> | <code>linux</code>\n<b>link</b> — если вместо фото или файла *.conf нужна ссылка для XTLS/SS для ПК\n\n<b>Не забываем прикрепить файл, если требуется!</b>",
+            "config_was_sent": "Отлично, конфигурация типа <b>{0}</b> отправлена!",
+            "error_bad_flags_number": "Ошибка: {0}\nСкорее всего, вы указали неверное число флагов!",
+            "error_unrecognized": "Ошибка: {0}"
         },
 
         "keyboard_buttons": {
-
+            "sql_insert_config": "SQL конфиг\n👾",
+            "sql_insert_client": "SQL клиент\n👾",
+            "get_file_id": "ID файла\n👾",
+            "send_message": "Отправить сообщение\n👾",
+            "show_earnings": "Заработок\n👾",
+            "reset_fsm_1": "Сброс FSM\n👾",
+            "send_message_everyone": "Отправить всем\n👾",
+            "send_message_selected": "Отправить избранным\n👾",
+            "reset_fsm_2": "Вернуться\n👾",
+            "config_answer_inline": "Ответить\n👾"
         },
 
         "telegram_file_ids": {
