feat(localization): localize other

--- a/src/localizations/ru.json
+++ b/src/localizations/ru.json
@@ -221,7 +221,13 @@
     "other":
     {
         "messages": {
-
+            "help": "Вы легко можете написать моему создателю при возникновении каких-либо проблем, а также при наличие идей по улучшению моей работы!",
+            "project_info": "Безлимитный, быстрый и полностью безопасный сервис, позволяющий устанавливать VPN-соединение в различных странах мира через собственные VPS за 200₽ в месяц.",
+            "chatgpt_only_for_active_sub": "Режим ChatGPT доступен только пользователям с активной подпиской!",
+            "unrecognized_message": "<b>Извините, я вас не понимаю</b> 🤔\n\n<tg-spoiler><i>Вы можете дать мне безграничную силу, включив режим ChatGPT в настройках или введя команду /chatgpt_mode</i></tg-spoiler>",
+            "hello_message": "Приветственное-сообщение-в-разработке",
+            "price_info": "Стоимость базовой подписки составляет 200₽/мес!",
+            "already_registered": "✨ Ух-ты! Вы уже есть в нашей системе! Телепортирую в личный кабинет!"
         },
 
         "keyboard_buttons": {
@@ -231,7 +237,8 @@
         },
 
         "telegram_file_ids": {
-
+            "project_info": "AgACAgIAAxkBAAIBt2T4tvKfh4vtyw9E0esmv5ez8oipAAJH0jEba5XBS205NYeWh2RdAQADAgADcwADMAQ",
+            "hello_message": "AgACAgIAAxkBAAIBZWT4pf2JcOWwWqzq6BrDBplE_LefAALD0TEba5XBSwtXi502wnAvAQADAgADcwADMAQ"
         }
     },
 
@@ -240,7 +247,35 @@
         "messages": {
             "wait_payment": "<b>Ожидаю оплаты подписки!</b>",
             "payment_form": "⭐️ <b>{0}</b>\n\n<b>Продление на срок</b>: {1} мес.\n<b>Сумма к оплате</b>: {2:g}₽ {discount_str}\n\nИдентификатор платежа: #{3}",
-            "config_info": "{link_str}<b>Создана</b>: {0}\n{platform_str}<b>Протокол</b>: {1}\n<b>Локация VPN</b>: {2}, {3}, скорость до {4} Мбит/с, ожидаемый пинг {5} мс."
+            "config_info": "{link_str}<b>Создана</b>: {0}\n{platform_str}<b>Протокол</b>: {1}\n<b>Локация VPN</b>: {2}, {3}, скорость до {4} Мбит/с, ожидаемый пинг {5} мс.",
+            "instructions": {
+                "wireguard":
+                {
+                    "android": "<Инструкция по установке WireGuard на Android>",
+                    "ios": "<Инструкция по установке WireGuard на IOS>",
+                    "windows": "<Инструкция по установке WireGuard на Windows>",
+                    "macos": "<Инструкция по установке WireGuard на macOS>",
+                    "linux": "<Инструкция по установке WireGuard на Linux>"
+                },
+        
+                "xray vless xtls-reality":
+                {
+                    "android": "<Инструкция по установке XTLS-Reality на Android>",
+                    "ios": "<Инструкция по установке XTLS-Reality на IOS>",
+                    "windows": "<Инструкция по установке XTLS-Reality на Windows>",
+                    "macos": "<Инструкция по установке XTLS-Reality на macOS>",
+                    "linux": "<Инструкция по установке XTLS-Reality на Linux>"
+                },
+        
+                "shadowsocks-2022":
+                {
+                    "android": "<Инструкция по установке Shadowsocks-2022 на Android>",
+                    "ios": "<Инструкция по установке Shadowsocks-2022 на IOS>",
+                    "windows": "<Инструкция по установке Shadowsocks-2022 на Windows>",
+                    "macos": "<Инструкция по установке Shadowsocks-2022 на macOS>",
+                    "linux": "<Инструкция по установке Shadowsocks-2022 на Linux>"
+                }
+            }
         },
 
         "keyboard_buttons": {
