feat(localization): localize service_functions

--- a/src/localizations/ru.json
+++ b/src/localizations/ru.json
@@ -114,7 +114,7 @@
             "local_promos_str": "<b>💎 Использованные специальные промокоды</b>:\n{local_promo_row_str}\n",
             "local_promo_row_str": "{0}. <code>{1}</code> на {2} дней подписки.\nВведен {3}.\n",
             "no_promo_entered": "Вы еще не вводили ни одного промокода. Следите за новостями! 🚀",
-            "config_was_received": "✨ Ура, конфигурация получена!"
+            "config_was_received": "✨ <b>Ура, конфигурация получена!</b>"
         },
 
         "keyboard_buttons": {
@@ -248,6 +248,28 @@
             "wait_payment": "<b>Ожидаю оплаты подписки!</b>",
             "payment_form": "⭐️ <b>{0}</b>\n\n<b>Продление на срок</b>: {1} мес.\n<b>Сумма к оплате</b>: {2:g}₽ {discount_str}\n\nИдентификатор платежа: #{3}",
             "config_info": "{link_str}<b>Создана</b>: {0}\n{platform_str}<b>Протокол</b>: {1}\n<b>Локация VPN</b>: {2}, {3}, скорость до {4} Мбит/с, ожидаемый пинг {5} мс.",
+            "config_request_new_client": "<b>Имя</b>: <code>{0}</code>\n<b>Тэг</b>: @{1}\n<b>ID</b>: <code>{2}</code>\n{ref_promo_str}<b>Конфигурация</b>: {3}, {4}, {5} ChatGPT\n\n<b>Запрос на подключение от нового пользователя!</b>",
+            "config_request_new_client_no_ref_promo_str": "Пользователь не использовал промокод, конфигурацию можно отправить <b>ТОЛЬКО ПОСЛЕ ОПЛАТЫ ПОДПИСКИ ИЛИ ВВОДА ПРОМОКОДА</b>\n",
+            "config_request_new_client_ref_promo_str": "<b>Промокод</b>: <code>{0}</code> от пользователя {1} {2} {3} <code>{4}</code> на {5} бесплатных дней по подписке {6:g}₽/мес.\n",
+            "config_request_old_client": "<b>Имя</b>: <code>{0}</code>\n<b>Тэг</b>: @{1}\n<b>ID</b>: <code>{2}</code>\n<b>Конфигурация</b>: {3}, {4}, {5} ChatGPT\n\n<b>Запрос дополнительной конфигурации от пользователя!</b>",
+            "admin_promo_was_entered_global_promo_str": "глобальный промокод с ID {0} на {1} дней подписки, заканчивающийся {2}.",
+            "admin_promo_was_etnered_local_promo_new_sub_str": "предоставляющий подписку за {0:g}₽/мес",
+            "admin_promo_was_entered_local_promo_str": "специальный промокод с ID {0} на {1} дней подписки, {new_sub_str}, заканчивающийся {2}.",
+            "admin_promo_was_entered": "Пользователем {0} {1} {2} <code>{3}</code> был введен {promo_str}",
+            "admin_successful_payment": "<b>Успешное продление подписки на {0} мес!</b>\n\n<b>Имя</b>: <code>{1}</code>\n<b>Фамилия</b>: <code>{2}</code>\n<b>Тег</b>: {3}\n<b>Telegram ID:</b> <code>{4}</code>\n<b>Client ID:</b> <code>{5}</code>",
+            "ref_promo_was_entered": "<b>🕊 Ух-ты! Пользователь {0}{1} использовал Ваш реферальный промокод при регистрации!</b>\n\nПосле того, как он внесет первую плату, вы получите {2} дней подписки бесплатно!",
+            "platform_str_chatgpt": "<b>Платформа</b>: {0} с доступом к ChatGPT\n",
+            "platform_str_no_chatgpt": "<b>Платформа</b>: {0}\n",
+            "error_no_telegram_file_id": "при попытке создания конфигурации не был указан telegram_file_id!",
+            "error_bad_file_type": "при попытке создания конфигурации был указан неверный file_type!",
+            "error_bad_protocol": "неверный ввод протокола (первый аргумент)!",
+            "error_bad_country": "неверный ввод страны (второй аргумент)!",
+            "error_bad_os": "неверный ввод ОС (третий аргумент)!",
+            "error_bad_link": "неверный ввод vless ссылки (четвертый аргумент)!",
+            "ref_client_paid_for_sub": "✨ Вау! Пользователь {0}{1}, присоединившийся к проекту по Вашему реферальному промокоду, впервые оплатил подписку!\n\n<b>Вы получаете месяц подписки бесплатно!</b>",
+            "wait_for_admin_answer": "Отлично! Теперь ждем ответа от разработчика: в скором времени он проверит Вашу регистрацию и вышлет конфигурацию! А пока вы можете исследовать бота!",
+            "discount_str": "(скидка {0:g}₽)",
+            "payment_successful": "Оплата произведена успешно!\n\nИдентификатор платежа: #{0}",
             "instructions": {
                 "wireguard":
                 {
