feat(localization): overall improvement

--- a/src/localizations/ru.json
+++ b/src/localizations/ru.json
@@ -10,8 +10,8 @@
             "choose_chatgpt_option": "<b>Используете ли Вы ChatGPT?</b>",
             "chatgpt_info": "<b>ChatGPT</b> — нейронная сеть в виде чат-бота, способная отвечать на сложные вопросы и вести осмысленный диалог!",
             "enter_ref_promo": "<b>И последний шаг: введите реферальный промокод, если он имеется</b>",
-            "ref_promo_accepted": "✨ Ух-ты! Принят промокод от пользователя <b>{0}</b>, дающий <b>{1} дней</b> бесплатной подписки!",
-            "sub_info": "🌟 Подключена <b>{0}</b> со стоимостью <b>{1:.0f}</b>₽ в месяц.",
+            "ref_promo_accepted": "✨ Ух ты! Принят промокод от <b>пользователя {0}</b>, дающий <b>{1} дней</b> бесплатной подписки!",
+            "sub_info": "🌟 Подключена <b>{0}</b> со <b>стоимостью {1:g}</b>₽ в месяц.",
             "invalid_promo": "Такого промокода нет! Попробуйте ввести его еще раз",
             "need_renew_sub": "❗️ <b>Чтобы получить конфигурацию, Вам необходимо продлить подписку!</b>"
         },
@@ -43,8 +43,8 @@
         "messages": {
             "rules": "<b>При работе с сервисом обязательно:</b>\n\n1. Запрещается делиться конфигурациями (QR-кодами для смартфонов или файлами <code>*.conf</code> для ПК) с другими людьми. Одна конфигурация может быть использована только для одного Вашего устройства. При этом для своего пользования Вы можете запросить неограниченное количество дополнительных конфигураций.\n\n2. Запрещается загружать файлы через торрент-клиенты. Однако сами файлы расширения <code>*.torrent</code> скачивать можно.\n<i>Пример: Вы хотите скачать фильм, однако сайт, на котором размещены файлы, недоступен из России. Вы включаете VPN, заходите на сайт и загружаете файл filmexample.torrent. Далее Вы отключаете VPN и приступаете к загрузке самого фильма в Вашем торрент-клиенте.</i>\n\n\n<b>При работе с сервисом рекомендуется:</b>\n\n1. Не использовать VPN в моментах, когда он Вам не нужен. Благодаря этому, Вы не будете испытывать проблем с Вашими приложениями.",
             "sub_isnt_active": "Подписка еще не активирована, так как администратор пока что не прислал конфигурацию! Не переживайте, отчет времени истечения подписки начнется только после ее получения!",
-            "sub_active": "Подписка активна!",
-            "sub_inactive": "Подписка деактивирована :/",
+            "sub_active": "🔥 <b>Подписка активна!</b>",
+            "sub_inactive": "😒 <b>Подписка деактивирована!</b>",
             "sub_expiration_date": "Срок окончания действия подписки: <b>{0}</b>.",
             "return_to_main_menu": "<i>Возвращаю в главное меню</i>",
             "go_sub_renewal_menu": "<i>Перехожу в меню продления подписки</i>",
@@ -56,10 +56,12 @@
             "check_payment_hour": "Проверяю все созданные платежи за последний час!",
             "payment_found": "Оплата по заказу с уникальным идентификатором <b>#{0}</b> найдена!",
             "go_personal_account": "<i>Перехожу в личный кабинет</i>",
+            "client_info_surname_str": "<b>Фамилия</b>: {0}\n",
+            "client_info_username_str": "<b>Ник</b>: {0}\n",
             "client_info": "👾 Вот что мне известно:\n\n{username_str}<b>Имя</b>: {0}\n{surname_str}<b>Телеграм ID</b>: {1}\n<b>Дата регистрации</b>: {2}",
-            "subscription_info": "🌟 <b>{0}</b>\n\n{1}\n\n<b>Стоимость</b>: {2:g}₽ в месяц.",
+            "subscription_info": "🌟 Информация о подписке:\n\n<b>{0}</b>\n{1}\n\n<b>Стоимость</b>: {2:g}₽ в месяц.",
             "go_config_menu": "<i>Перехожу в меню конфигураций</i>",
-            "ref_program_info": "<b>Ух-ты! У нас появилась реферальная программа!</b>\n\nОписание-реферальной-программы-в-разработке",
+            "ref_program_info": "<b>Ух ты! У нас появилась реферальная программа!</b>\n\nОписание-реферальной-программы-в-разработке",
             "go_promo_menu": "<i>Перехожу в меню промокодов</i>",
             "enter_promo": "<b>🎟 Отправьте мне промокод сообщением!</b>",
             "go_settings": "<i>Перехожу в настройки</i>",
@@ -69,10 +71,6 @@
             "return_to_configs_menu": "<i>Возвращаю в меню конфигураций</i>",
             "cant_request_config": "Для запроса новой конфигурации необходимо продлить подписку!",
             "ask_three_questions": "Понадобиться ответить на 3 вопроса, чтобы запросить новую конфигурацию у администратора!\n\nОбщее число Ваших конфигураций: <b>{0}</b>",
-            "choose_your_platform": "<b>Выберите свою платформу</b>",
-            "choose_your_os": "<b>Укажите операционную систему</b>",
-            "choose_chatgpt_option": "<b>Используете ли Вы ChatGPT?</b>",
-            "chatgpt_info": "<b>ChatGPT</b> — нейронная сеть в виде чат-бота, способная отвечать на сложные вопросы и вести осмысленный диалог!",
             "wait_for_admin": "Отлично! Теперь ждем ответа от разработчика: в скором времени он проверит ваши текущие конфигурации и вышлет новую!",
             "i_wanna_sleep": "Пожалуйста, не забывайте, что он тоже человек, и периодически спит (хотя на самом деле крайне редко) 😅",
             "return_to_settings": "<i>Возвращаю в настройки</i>",
@@ -86,9 +84,9 @@
             "3d_off": "<b>Отправка уведомления за 3 дня до срока окончания подписки выключена</b>",
             "7d_on": "<b>Отправка уведомления за 7 дней до срока окончания подписки включена</b>",
             "7d_off": "<b>Отправка уведомления за 7 дней до срока окончания подписки выключена</b>",
-            "invited_by": "🚀 Вы были приглашены пользователем <b>{0} {username_str}</b>",
+            "invited_by": "🚀 Вы были приглашены <b>пользователем {0}{1}</b>",
             "invited_by_nobody": "🚀 Ого! Вы сами узнали о существовании данного проекта и зарегистрировались без приглашения от другого пользователя!",
-            "who_was_invited_str": "{0}. Пользователь <b>{1} {username_str}</b>\n",
+            "who_was_invited_str": "{0}. Пользователь <b>{1}{2}</b>\n",
             "who_was_invited": "🕊 Приглашенные Вами пользователи, которые вступили в проект:\n\n{invited_str}",
             "nobody_was_invited": "Вы еще не пригласили ни одного пользователя. Рассказывайте о нашем проекте друзьям и получайте бесплатные месяца подписки!",
             "ref_program_invites_texts": [
@@ -177,7 +175,7 @@
             "message_everyone_everybody_received": "<b>Ура, сообщение получат все пользователи сервиса!</b>",
             "message_everyone_somebody_didnt_recieve": "<b>Пользователи, до которых сообщение не дошло</b>:\n{ignored_clients_str}",
             "how_message_looks": "Вот так будет выглядеть Ваше сообщение:",
-            "message_selected_info": "Введите через запятую <b>username</b> или <b>telegram_id</b> пользователей, для которых предназначена рассылка.",
+            "message_selected_info": "Введите через запятую <i><b>username</b></i> или <i><b>telegram_id</b></i> пользователей, для которых предназначена рассылка.",
             "message_selected_somebody_received": "<b>Сообщение будет отправленно пользователям</b>:\n\n {selected_clients_str}",
             "message_selected_nobody_received": "Вы ошиблись при вводе пользователей! Сообщение ни до кого не дойдет!",
             "message_selected_enter_message_info": "Теперь введите необходимую информацию следующим сообщением, а также приложите файлы при необходимости!\n\nВведите /perfect, чтобы подтвердить выбор последнего отправленного сообщения!",
@@ -221,13 +219,13 @@
     "other":
     {
         "messages": {
-            "help": "Вы легко можете написать моему создателю при возникновении каких-либо проблем, а также при наличие идей по улучшению моей работы!",
+            "help": "Вы легко можете написать моему создателю при возникновении каких-либо проблем, а также при наличии идей по улучшению моей работы!",
             "project_info": "Безлимитный, быстрый и полностью безопасный сервис, позволяющий устанавливать VPN-соединение в различных странах мира через собственные VPS за 200₽ в месяц.",
             "chatgpt_only_for_active_sub": "Режим ChatGPT доступен только пользователям с активной подпиской!",
             "unrecognized_message": "<b>Извините, я вас не понимаю</b> 🤔\n\n<tg-spoiler><i>Вы можете дать мне безграничную силу, включив режим ChatGPT в настройках или введя команду /chatgpt_mode</i></tg-spoiler>",
             "hello_message": "Приветственное-сообщение-в-разработке",
             "price_info": "Стоимость базовой подписки составляет 200₽/мес!",
-            "already_registered": "✨ Ух-ты! Вы уже есть в нашей системе! Телепортирую в личный кабинет!"
+            "already_registered": "✨ Ух ты! Вы уже есть в нашей системе! Телепортирую в личный кабинет!"
         },
 
         "keyboard_buttons": {
@@ -246,18 +244,16 @@
     {
         "messages": {
             "wait_payment": "<b>Ожидаю оплаты подписки!</b>",
-            "payment_form": "⭐️ <b>{0}</b>\n\n<b>Продление на срок</b>: {1} мес.\n<b>Сумма к оплате</b>: {2:g}₽ {discount_str}\n\nИдентификатор платежа: #{3}",
+            "payment_form": "💳 Информация об оплате:\n\n<b>Тип подписки</b>: {0}\n<b>Сумма к оплате</b>: {2:g}₽ {discount_str}\n<b>Продление на срок</b>: {1} мес.\n\nИдентификатор платежа: #{3}",
             "config_info": "{link_str}<b>Создана</b>: {0}\n{platform_str}<b>Протокол</b>: {1}\n<b>Локация VPN</b>: {2}, {3}, скорость до {4} Мбит/с, ожидаемый пинг {5} мс.",
-            "config_request_new_client": "<b>Имя</b>: <code>{0}</code>\n<b>Тэг</b>: @{1}\n<b>ID</b>: <code>{2}</code>\n{ref_promo_str}<b>Конфигурация</b>: {3}, {4}, {5} ChatGPT\n\n<b>Запрос на подключение от нового пользователя!</b>",
+            "config_request_new_client": "👾 <b>Запрос на подключение от нового пользователя!</b>\n\n<b>Client ID</b>: <code>{6}</code>\n<b>Telegram INFO</b>:{1} <code>{0}</code> <code>{2}</code>\n<b>Конфигурация</b>: {3}, {4}, {5} ChatGPT\n<b>Реферальный промокод</b>: {ref_promo_str}",
             "config_request_new_client_no_ref_promo_str": "Пользователь не использовал промокод, конфигурацию можно отправить <b>ТОЛЬКО ПОСЛЕ ОПЛАТЫ ПОДПИСКИ ИЛИ ВВОДА ПРОМОКОДА</b>\n",
-            "config_request_new_client_ref_promo_str": "<b>Промокод</b>: <code>{0}</code> от пользователя {1} {2} {3} <code>{4}</code> на {5} бесплатных дней по подписке {6:g}₽/мес.\n",
-            "config_request_old_client": "<b>Имя</b>: <code>{0}</code>\n<b>Тэг</b>: @{1}\n<b>ID</b>: <code>{2}</code>\n<b>Конфигурация</b>: {3}, {4}, {5} ChatGPT\n\n<b>Запрос дополнительной конфигурации от пользователя!</b>",
-            "admin_promo_was_entered_global_promo_str": "глобальный промокод с ID {0} на {1} дней подписки, заканчивающийся {2}.",
-            "admin_promo_was_etnered_local_promo_new_sub_str": "предоставляющий подписку за {0:g}₽/мес",
-            "admin_promo_was_entered_local_promo_str": "специальный промокод с ID {0} на {1} дней подписки, {new_sub_str}, заканчивающийся {2}.",
-            "admin_promo_was_entered": "Пользователем {0} {1} {2} <code>{3}</code> был введен {promo_str}",
-            "admin_successful_payment": "<b>Успешное продление подписки на {0} мес!</b>\n\n<b>Имя</b>: <code>{1}</code>\n<b>Фамилия</b>: <code>{2}</code>\n<b>Тег</b>: {3}\n<b>Telegram ID:</b> <code>{4}</code>\n<b>Client ID:</b> <code>{5}</code>",
-            "ref_promo_was_entered": "<b>🕊 Ух-ты! Пользователь {0}{1} использовал Ваш реферальный промокод при регистрации!</b>\n\nПосле того, как он внесет первую плату, вы получите {2} дней подписки бесплатно!",
+            "config_request_new_client_ref_promo_str": "<code>{0}</code> от пользователя{3} <code>{1}{2}</code> <code>{4}</code> на {5} бесплатных дней по подписке {6:g}₽/мес.\n",
+            "config_request_old_client": "👾 <b>Запрос дополнительной конфигурации от пользователя!</b>\n\n<b>Client ID</b>: <code>{6}</code>\n<b>Telegram INFO</b>:{1} <code>{0}</code> <code>{2}</code>\n<b>Конфигурация</b>: {3}, {4}, {5} ChatGPT",
+            "admin_promo_was_etnered_local_promo_new_sub_str": ", предоставляющий подписку за {0:g}₽/мес,",
+            "admin_promo_was_entered": "👾 <b>Введен промокод!</b>\n\n<b>Client ID</b>: <code>{0}</code>\n<b>Telegram INFO</b>:{1} <code>{2}{3}</code> <code>{4}</code>\n<b>О промокоде</b>: {5} с id {6} на {7} дней подписки{new_sub_str}, заканчивающийся {8}",
+            "admin_successful_payment": "👾 <b>Успешное продление подписки на {0} мес!</b>\n\n<b>Client ID</b>: <code>{1}</code>\n<b>Telegram INFO</b>:{2} <code>{3}{4}</code> <code>{5}</code>",
+            "ref_promo_was_entered": "🕊 Ух ты! Пользователь {0}{1} использовал Ваш реферальный промокод при регистрации!\n\n<b>После того, как он впервые оплатит подписку, вы получите {2} дней подписки бесплатно!</b>",
             "platform_str_chatgpt": "<b>Платформа</b>: {0} с доступом к ChatGPT\n",
             "platform_str_no_chatgpt": "<b>Платформа</b>: {0}\n",
             "error_no_telegram_file_id": "при попытке создания конфигурации не был указан telegram_file_id!",
@@ -266,7 +262,7 @@
             "error_bad_country": "неверный ввод страны (второй аргумент)!",
             "error_bad_os": "неверный ввод ОС (третий аргумент)!",
             "error_bad_link": "неверный ввод vless ссылки (четвертый аргумент)!",
-            "ref_client_paid_for_sub": "✨ Вау! Пользователь {0}{1}, присоединившийся к проекту по Вашему реферальному промокоду, впервые оплатил подписку!\n\n<b>Вы получаете месяц подписки бесплатно!</b>",
+            "ref_client_paid_for_sub": "🕊 Вау! Пользователь {0}{1}, присоединившийся к проекту по Вашему реферальному промокоду, впервые оплатил подписку!\n\n<b>Вы получаете месяц подписки бесплатно!</b>",
             "wait_for_admin_answer": "Отлично! Теперь ждем ответа от разработчика: в скором времени он проверит Вашу регистрацию и вышлет конфигурацию! А пока вы можете исследовать бота!",
             "discount_str": "(скидка {0:g}₽)",
             "payment_successful": "Оплата произведена успешно!\n\nИдентификатор платежа: #{0}",
