feat(localization): add en localization

--- a/src/localizations/ru.json
+++ b/src/localizations/ru.json
@@ -23,7 +23,7 @@
             "pc": "💻 ПК",
             "cancel": "Отмена",
             "android": "Android",
-            "ios": "IOS (IPhone)",
+            "ios": "IOS (iPhone)",
             "windows": "Windows",
             "macos": "macOS",
             "linux": "Linux",
