--- a/src/localizations/ru.json
+++ b/src/localizations/ru.json
@@ -219,7 +219,7 @@
     "other":
     {
         "messages": {
-            "help": "Вы легко можете написать моему создателю при возникновении каких-либо проблем, а также при наличии идей по улучшению моей работы!",
+            "help": "Вы легко можете написать моему создателю при возникновении каких-либо проблем, а также при наличии идей по улучшению моей работы!\n\n<b>Если я не воспринимаю нажатия на кнопки, сбросьте мое состояние при помощи команды /start</b>",
             "project_info": "Безлимитный, быстрый и полностью безопасный сервис, позволяющий устанавливать VPN-соединение в различных странах мира через собственные VPS за 200₽ в месяц.",
             "chatgpt_only_for_active_sub": "Режим ChatGPT доступен только пользователям с активной подпиской!",
             "unrecognized_message": "<b>Извините, я вас не понимаю</b> 🤔\n\n<tg-spoiler><i>Вы можете дать мне безграничную силу, включив режим ChatGPT в настройках или введя команду /chatgpt_mode</i></tg-spoiler>",
