refactor: rename database.postgesql_db.py and services.service_functions.py

--- a/src/localizations/en.json
+++ b/src/localizations/en.json
@@ -240,7 +240,7 @@
         }
     },
 
-    "service_functions":
+    "internal_functions":
     {
         "messages": {
             "wait_payment": "<b>Waiting for the subscription payment!</b>",
