fix(localization): add him\her mention

--- a/src/localizations/ru.json
+++ b/src/localizations/ru.json
@@ -253,7 +253,7 @@
             "admin_promo_was_etnered_local_promo_new_sub_str": ", предоставляющий подписку за {0:g}₽/мес,",
             "admin_promo_was_entered": "👾 <b>Введен промокод!</b>\n\n<b>Client ID</b>: <code>{0}</code>\n<b>Telegram INFO</b>:{1} <code>{2}{3}</code> <code>{4}</code>\n<b>О промокоде</b>: {5} с id {6} на {7} дней подписки{new_sub_str}, заканчивающийся {8}",
             "admin_successful_payment": "👾 <b>Успешное продление подписки на {0} мес!</b>\n\n<b>Client ID</b>: <code>{1}</code>\n<b>Telegram INFO</b>:{2} <code>{3}{4}</code> <code>{5}</code>",
-            "ref_promo_was_entered": "🕊 Ух ты! Пользователь {0}{1} использовал Ваш реферальный промокод при регистрации!\n\n<b>После того, как он впервые оплатит подписку, вы получите {2} дней подписки бесплатно!</b>",
+            "ref_promo_was_entered": "🕊 Ух ты! Пользователь {0}{1} использовал Ваш реферальный промокод при регистрации!\n\n<b>После того, как он (она) впервые оплатит подписку, вы получите {2} дней подписки бесплатно!</b>",
             "platform_str_chatgpt": "<b>Платформа</b>: {0} с доступом к ChatGPT\n",
             "platform_str_no_chatgpt": "<b>Платформа</b>: {0}\n",
             "error_no_telegram_file_id": "при попытке создания конфигурации не был указан telegram_file_id!",
@@ -262,7 +262,7 @@
             "error_bad_country": "неверный ввод страны (второй аргумент)!",
             "error_bad_os": "неверный ввод ОС (третий аргумент)!",
             "error_bad_link": "неверный ввод vless ссылки (четвертый аргумент)!",
-            "ref_client_paid_for_sub": "🕊 Вау! Пользователь {0}{1}, присоединившийся к проекту по Вашему реферальному промокоду, впервые оплатил подписку!\n\n<b>Вы получаете месяц подписки бесплатно!</b>",
+            "ref_client_paid_for_sub": "🕊 Вау! Пользователь {0}{1}, присоединившийся к проекту по Вашему реферальному промокоду, впервые оплатил(а) подписку!\n\n<b>Вы получаете месяц подписки бесплатно!</b>",
             "wait_for_admin_answer": "Отлично! Теперь ждем ответа от разработчика: в скором времени он проверит Вашу регистрацию и вышлет конфигурацию! А пока вы можете исследовать бота!",
             "discount_str": "(скидка {0:g}₽)",
             "payment_successful": "Оплата произведена успешно!\n\nИдентификатор платежа: #{0}",
