feat(admin): add ability to get clients' info

--- a/src/localizations/en.json
+++ b/src/localizations/en.json
@@ -188,6 +188,9 @@
             "error_too_many_flags": "Flags entered incorrectly, there are too many of them!",
             "error_bad_protocol": "Protocol entered incorrectly!",
             "error_bad_location": "Location entered incorrectly!",
+            "clients_info": "🚀 Displaying information about all clients!",
+            "clients_info_sub_active": "✅  ",
+            "clients_info_sub_inactive": "❌  ",
             "show_earnings": "So-so! Earnings for the current month are <b>{0:g}</b>₽!",
             "file_id_photo": "<b>file_id photo</b>:\n<code>{0}</code>",
             "file_id_document": "<b>document file_id</b>:\n<code>{0}</code>",
@@ -203,6 +206,7 @@
             "sql_insert_client": "SQL client\n👾",
             "get_file_id": "File ID\n👾",
             "send_message": "Send message\n👾",
+            "clients_info": "About clients\n👾",
             "show_earnings": "Earnings\n👾",
             "reset_fsm_1": "Reset FSM\n👾",
             "send_message_everyone": "Send to all\n👾",
