--- a/src/localizations/ru.json
+++ b/src/localizations/ru.json
@@ -188,6 +188,9 @@
             "error_too_many_flags": "Флаги введены неверно, их слишком много!",
             "error_bad_protocol": "Протокол введен неверно!",
             "error_bad_location": "Локация введена неверно!",
+            "clients_info": "🚀 Вывожу информацию обо всех клиентах!",
+            "clients_info_sub_active": "✅  ",
+            "clients_info_sub_inactive": "❌  ",
             "show_earnings": "💎 Так-так! Заработок за текущий месяц составляет <b>{0:g}</b>₽!",
             "file_id_photo": "<b>file_id фото</b>:\n<code>{0}</code>",
             "file_id_document": "<b>file_id документа</b>:\n<code>{0}</code>",
@@ -203,6 +206,7 @@
             "sql_insert_client": "SQL клиент\n👾",
             "get_file_id": "ID файла\n👾",
             "send_message": "Отправить сообщение\n👾",
+            "clients_info": "О клиентах\n👾",
             "show_earnings": "Заработок\n👾",
             "reset_fsm_1": "Сброс FSM\n👾",
             "send_message_everyone": "Отправить всем\n👾",
