feat: add restrictions for clients with free subsc

--- a/src/localizations/en.json
+++ b/src/localizations/en.json
@@ -44,10 +44,12 @@
             "rules": "<b>When working with the service, it is mandatory:</b>\n\n1. It is forbidden to share configurations (QR codes for smartphones or <code>*.conf</code> files for PCs) with other people. One configuration can only be used for one of your devices. At the same time, you can request an unlimited number of additional configurations for your use.\n\n2. It is forbidden to download files via torrent clients. However, the <code>*.torrent</code> extension files themselves can be downloaded.\n<i>Example: You want to download the movie, but the website hosting the files is not available from Russia. You turn on the VPN, go to the website and download the filmexample.torrent file. Next, you turn off the VPN and start downloading the movie itself in your torrent client.</i>\n\n\n<b>When working with the service, it is recommended:</b>\n\n1. Do not use a VPN at times when you do not need it. Thanks to this, you will not experience problems with your applications.",
             "sub_isnt_active": "The subscription has not been activated yet, as the administrator has not yet sent the configuration! Don't worry, the subscription expiration time report will start only after you receive it!",
             "sub_active": "🔥 <b>The subscription is active!</b>",
+            "sub_is_free": "🔥 <b>The subscription is active forever!</b>",
             "sub_inactive": "😒 <b>The subscription has been deactivated!</b>",
             "sub_expiration_date": "Subscription expiration date: <b>{0}</b>.",
             "return_to_main_menu": "<i>Returning to the main menu</i>",
             "go_sub_renewal_menu": "<i>Going to the subscription renewal menu</i>",
+            "sub_renewal_free": "<pre><code class=\"language-matrix\">You are the One, Neo! There is no need to pay for a subscription 🐇</code></pre>",
             "payment_history_message": "🌟 <b>{0}</b> was extended for {1} months for {2:g}₽.\n\n<b>Payment date</b>: {3}\n\nPayment identifier: #{4}",
             "cant_find_payments": "Alas! I could not find information about successful payments",
             "restore_payments": "To restore long-standing payments, use the \n/restore_payments command",
