--- a/src/localizations/ru.json
+++ b/src/localizations/ru.json
@@ -43,11 +43,13 @@
         "messages": {
             "rules": "<b>При работе с сервисом обязательно:</b>\n\n1. Запрещается делиться конфигурациями (QR-кодами для смартфонов или файлами <code>*.conf</code> для ПК) с другими людьми. Одна конфигурация может быть использована только для одного Вашего устройства. При этом для своего пользования Вы можете запросить неограниченное количество дополнительных конфигураций.\n\n2. Запрещается загружать файлы через торрент-клиенты. Однако сами файлы расширения <code>*.torrent</code> скачивать можно.\n<i>Пример: Вы хотите скачать фильм, однако сайт, на котором размещены файлы, недоступен из России. Вы включаете VPN, заходите на сайт и загружаете файл filmexample.torrent. Далее Вы отключаете VPN и приступаете к загрузке самого фильма в Вашем торрент-клиенте.</i>\n\n\n<b>При работе с сервисом рекомендуется:</b>\n\n1. Не использовать VPN в моментах, когда он Вам не нужен. Благодаря этому, Вы не будете испытывать проблем с Вашими приложениями.",
             "sub_isnt_active": "Подписка еще не активирована, так как администратор пока что не прислал конфигурацию! Не переживайте, отчет времени истечения подписки начнется только после ее получения!",
+            "sub_is_free": "🔥 <b>Подписка активна вечно!</b>",
             "sub_active": "🔥 <b>Подписка активна!</b>",
             "sub_inactive": "😒 <b>Подписка деактивирована!</b>",
             "sub_expiration_date": "Срок окончания действия подписки: <b>{0}</b>.",
             "return_to_main_menu": "<i>Возвращаю в главное меню</i>",
             "go_sub_renewal_menu": "<i>Перехожу в меню продления подписки</i>",
+            "sub_renewal_free": "<pre><code class=\"language-matrix\">Ты избранный, Нео! Оплачивать подписку нет необходимости 🐇</code></pre>",
             "payment_history_message": "🌟 <b>{0}</b> была продлена на {1} мес. за {2:g}₽.\n\n<b>Дата оплаты</b>: {3}\n\nИдентификатор платежа: #{4}",
             "cant_find_payments": "Увы! Я не смог найти информацию об успешных платежах 😔",
             "restore_payments": "Для восстановления давних платежей воспользуйтесь командой\n/restore_payments",
