feat(user_authorized): add explanations in settings

--- a/src/localizations/ru.json
+++ b/src/localizations/ru.json
@@ -66,7 +66,7 @@
             "ref_program_info": "<b>Ух ты! У нас появилась реферальная программа!</b>\n\nОписание-реферальной-программы-в-разработке",
             "go_promo_menu": "<i>Перехожу в меню промокодов</i>",
             "enter_promo": "<b>🎟 Отправьте мне промокод сообщением!</b>",
-            "go_settings": "<i>Перехожу в настройки</i>",
+            "go_settings": "<i>Перехожу в меню настроек</i>",
             "return_to_personal_account": "<i>Возвращаю в личный кабинет</i>",
             "configs_info": "Информация о всех ваших конфигурациях, теперь не нужно искать их по диалогу с ботом!\n\nВсего конфигураций <b>{0}</b>.",
             "configs_rules": "<b>Напоминаю основные правила /rules:\n\n1. Одно устройство — одна конфигурация.\n2. Делиться конфигурациями с другими людьми запрещено!</b>",
@@ -75,11 +75,13 @@
             "ask_three_questions": "Понадобиться ответить на 3 вопроса, чтобы запросить новую конфигурацию у администратора!\n\nОбщее число Ваших конфигураций: <b>{0}</b>",
             "wait_for_admin": "Отлично! Теперь ждем ответа от разработчика: в скором времени он проверит ваши текущие конфигурации и вышлет новую!",
             "i_wanna_sleep": "Пожалуйста, не забывайте, что он тоже человек, и периодически спит (хотя на самом деле крайне редко) 😅",
-            "return_to_settings": "<i>Возвращаю в настройки</i>",
+            "return_to_settings": "<i>Возвращаю в меню настроек</i>",
             "go_settings_chatgpt": "<i>Перехожу в настройки режима ChatGPT</i>",
+            "settings_chatgpt_info": "💥 <b>При включении данного режима я буду осознанно отвечать на любые Ваши сообщения, используя всю мощь нейросети ChatGPT!",
             "chatgpt_on": "<b>Режим ChatGPT для бота включен</b>",
             "chatgpt_off": "<b>Режим ChatGPT для бота выключен</b>",
             "go_settings_notifications": "<i>Перехожу в настройки уведомлений</i>",
+            "settings_notifications_info": "<b>В данном меню Вы можете настроить получение уведомлений о скором истечении срока действия подписки!",
             "1d_on": "<b>Отправка уведомления за 1 день до срока окончания подписки включена</b>",
             "1d_off": "<b>Отправка уведомления за 1 день до срока окончания подписки выключена</b>",
             "3d_on": "<b>Отправка уведомления за 3 дня до срока окончания подписки включена</b>",
